@@ -4354,7 +4354,7 @@ bool ProcessBlock(CNode* pfrom, CBlock* pblock)
                 // Skips downloading orphan chain (Hypersync)
                 if (GetBoolArg("-hypersync", false) == true)
                 {
-                    if (fForceSyncAfterOrphan < 1)
+                    if (fForceSyncAfterOrphan < 100)
                     {
                         CChain::ForceSync(pfrom, hash);
 
@@ -4392,7 +4392,8 @@ bool ProcessBlock(CNode* pfrom, CBlock* pblock)
 
                 // To prevent local wallet getting stuck
                 // Query all connected nodes (except orphaned node) with a new getblocks request.
-                if (fForceSyncAfterOrphan < 3)
+
+                if (fForceSyncAfterOrphan < 100)
                 {
                     // Quickly download the rest of chain from other peers during InitialBlockDownload
                     // Skips downloading orphan chain (Hypersync)
@@ -4412,7 +4413,7 @@ bool ProcessBlock(CNode* pfrom, CBlock* pblock)
 
         // Auto Chain pruning Max X blocks, 0 block max default
         // EXPERIMENTAL
-        int nAutoPrune = GetArg("-autoprune", 3);
+        int nAutoPrune = GetArg("-autoprune", 0);
 
         if (nAutoPrune > 0)
         {
@@ -4423,7 +4424,7 @@ bool ProcessBlock(CNode* pfrom, CBlock* pblock)
                 CBlock block;
 
                 block.ReadFromDisk(pindexBest->pprev);
-                pindexBest->pprev->pnext = NULL;
+                pindexBest->pprev->pprev->pnext = NULL;
                 block.DisconnectBlock(txdbAddr, pindexBest->pprev);
                 block.SetBestChain(txdbAddr, pindexBest->pprev);
 
