@@ -71,11 +71,17 @@ v1.0.0.7 (Pre-release - unfinished)
 * Disabled: accountingDeprecationCheck
 * Assert() replaced by proper debuging in core functions/classes
 * Installed ForceRandomSync of X amount of nodes
+* Sanitize command strings (Evil-Knievel) https://github.com/bitcoin/bitcoin/pull/5770/commits/28d4cff0ed2d4438da4bbf2d4ca0465715603af5
+
 
 TO FINISH:
-* Apostolaki Hijack fix (Firewall)
+* Apostolaki Hijack (BGP) fix (Firewall)
 * Eclipse Attack fix (Firewall)
 * Erebus Attack fix (Firewall)
+* https://bitcointalk.org/index.php?topic=1039713.0
+* https://github.com/dashpay/dash/pull/178/commits/864338a2b2405f3f598961fcc20c0881ae06391e
+* https://github.com/bitcoin/bitcoin/commit/f676c80f437e15ab0ee190e93baea733a88db0f2#commitcomment-8996114
+
 
 v1.0.0.7 (To Finish before release)
 --------
